disestablish interrupt handler regardless of the state whenever it was setup, i.e. also when the instance is DISCONNECTING already

fixes PR port-xen/53487 by Bert Kiers; fix found and reported by
Dennis Lindroos

XXX pullup netbsd-8